--- a/css2.css
+++ b/css2.css
@@ -185,52 +185,17 @@ button:hover {
     color:  #3f2a0c; /* Marrón pastel */
 }
 
-/* Media queries para pantallas más pequeñas */
-@media (max-width: 768px) {
-    header {
-        font-size: 20px;
-        padding: 15px;
-    }
-
-    .container {
-        margin: 10px;
-        padding: 15px;
-    }
-
-    input, select, button {
-        font-size: 14px;
-        padding: 8px;
-    }
-
-    /* Mostrar el menú hamburguesa en móviles */
-    .menu-icon {
-        display: block;
-    }
-
-    /* Ajustar el menú lateral */
-    .side-menu {
-        width: 200px;
-    }
-
-    .side-menu ul li {
-        margin: 10px 0;
-    }
-}
-
+/* Header ajuste para móviles */
 @media (max-width: 480px) {
     header {
-        font-size: 18px;
-        padding: 10px;
-    }
-
-    .container {
-        margin: 5px;
-        padding: 10px;
+        font-size: 18px;  /* Reduce el tamaño de la fuente */
+        padding: 10px;    /* Menor padding para hacer el header más compacto */
+        height: 120px;    /* Baja la altura del header */
     }
 
     input, select, button {
-        font-size: 12px;
-        padding: 6px;
+        font-size: 12px;  /* Disminuye el tamaño del texto en inputs, selects y botones */
+        padding: 6px;      /* Aumenta el padding según el espacio disponible */
     }
 
     .side-menu {
